@@ -1,7 +1,7 @@
 /* Returns the type of floating point number from a _Decimal64 type
 
    Copyright (C) 2006 IBM Corporation.
-   Copyright (C) 2007, 2009 Free Software Foundation, Inc.
+   Copyright (C) 2007-2014 Free Software Foundation, Inc.
 
    This file is part of the Decimal Floating Point C Library.
 
@@ -23,7 +23,40 @@
 
    Please see libdfp/COPYING.txt for more information.  */
 
+#include <math.h>
+#include <math_private.h>
+#include <ieee754r_private.h>
+
 #define _DECIMAL_SIZE 64
 #include <decimal64.h>
+#include <dfpmacro.h>
 
-#include "fpclassifyd32.c"
+int
+__fpclassifyd64 (_Decimal64 x)
+{
+  decNumber dn_x;
+  decContext context;
+
+  FUNC_CONVERT_TO_DN (&x, &dn_x);
+
+  if (decNumberIsNaN (&dn_x))
+    return FP_NAN;
+  else if (decNumberIsInfinite (&dn_x))
+    return FP_INFINITE;
+  else if (decNumberIsZero (&dn_x))
+    return FP_ZERO;
+
+  /* Since DFP value are not normalized, checking the exponent for
+     normal/subnormal is not suffice.  For instance, the value 10e-96 will
+     result in a expoenent below the minimum, however it is still a FP_NORMAL
+     number due implicit normalization.  TO avoid such traps the check relies
+     on runtime comparisons.  */
+  decContextDefault (&context, DEC_INIT_DECIMAL64);
+  if (decNumberIsSubnormal (&dn_x, &context))
+    return FP_SUBNORMAL;
+
+  return FP_NORMAL;
+}
+
+hidden_def (__fpclassifyd64)
+weak_alias (__fpclassifyd64, fpclassifyd64)
